# routes/index.js
@@ -3,7 +3,7 @@ const router = express.Router();
 
 router.use('/', require('./home'))
 router.use('/register', require('./register'));
-router.use('/login', require('./loginAdmin'));
+router.use('/loginAdmin', require('./loginAdmin'));
 router.use('/logout', require('./logout'));
 router.use('/owners', require('./owner'));
 router.use('/pets', require('./pet'));
