# routes/pet.js
@@ -1,6 +1,7 @@
 const express = require('express');
 const router = express.Router();
-const {ensureAuth} = require('../middlewares/googleAuth')
+const {ensureAuth} = require('../middlewares/googleAuth');
+const verify = require("../middlewares/verifyToken");
 
 const petController = require('../controllers/pet');
 
@@ -8,10 +9,10 @@ router.get('/', ensureAuth, petController.getPets);
 
 router.get('/:_id', ensureAuth, petController.getPet);
 
-router.post('/', ensureAuth, petController.createPet);
+router.post('/', ensureAuth, verify.auth, petController.createPet);
 
-router.put('/:_id', ensureAuth, petController.updatePet);
+router.put('/:_id', ensureAuth, verify.auth, petController.updatePet);
 
-router.delete('/:_id', ensureAuth, petController.deletePet);
+router.delete('/:_id', ensureAuth, verify.auth, petController.deletePet);
 
 module.exports = router;
